[gd_scene load_steps=4 format=3 uid="uid://knv3ieq16x10"]

[ext_resource type="PackedScene" uid="uid://cuyrf6q1kuvcx" path="res://Scenes/player.tscn" id="1_51g76"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_j3877"]

[sub_resource type="Curve2D" id="Curve2D_bdmap"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -51, -46, 0, 0, 0, 0, 742, -48, 0, 0, 0, 0, 744, 421, 0, 0, 0, 0, -54, 422, 0, 0, 0, 0, -51, -46)
}
point_count = 5

[node name="Game" type="Node2D"]
script = ExtResource("1_j3877")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 692.0
offset_bottom = 392.0
color = Color(0.596328, 0.599599, 0.423043, 1)

[node name="Player" parent="." instance=ExtResource("1_51g76")]
position = Vector2(141, 63)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-141, -63)
curve = SubResource("Curve2D_bdmap")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-51, -46)
rotation = -0.00252206

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Label" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -13.5
offset_right = 49.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Game Over"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
